# social-rating-bot

./: .env.example  .gitignore  Cargo.toml
src/: commands.rs  main.rs
src/commands/: basic.rs  experience.rs  mod.rs  reputation.rs
src/components/: config.rs  database.rs  mod.rs  translation.rs
src/handlers/: experience.rs
src/services/: experience.rs
translations/: en-US.ftl  ru.ftl
